...
// MARK: - Camera access
private extension VideoStreamWithoutRobotViewController {
    
    func handleCameraAccess() {

        func showAccessCameraError() {
            Message.error(message: "You have to grant access to camera in order to use the app.")
        }

        switch AVCaptureDevice.authorizationStatus(for: .video) {
        case .authorized:
            group.leave()
        case .notDetermined:
...
