...
                            <connections>
                                <action selector="connectButtonTapped:" destination="-1" eventType="touchUpInside" id="dfH-Cy-pa3"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O03-ub-TEA">
                            <rect key="frame" x="0.0" y="257.5" width="352" height="30"/>
                            <state key="normal" title="Don't have a robot?"/>
                            <connections>
                                <action selector="dontHaveARobotButtonTapped:" destination="-1" eventType="touchUpInside" id="bz8-Jk-uYm"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
...
